[tool.poetry]
name = "yessql"
version = "0.2.3"
description = "An easy to use python SQL database interface for Postgres and MySQL"
authors = ["Mitchell Lisle <m.lisle90@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.10.9"
aiomysql = "^0.2.0"
asyncpg = "^0.27.0"
pg8000 = "^1.29.8"
pipe = "^2.0"


[tool.poetry.group.dev.dependencies]
bumpversion = "^0.6.0"
wheel = "^0.40.0"
twine = "^4.0.2"
flake8 = "^6.0.0"
flake8-bugbear = "^23.6.5"
flake8-eradicate = "^1.5.0"
pep8-naming = "^0.13.3"
dlint = "^0.14.1"
mypy = "^1.3.0"
pre-commit = "^3.3.3"


[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.3"
mkdocs-material = "^9.1.16"
mkdocs-gen-files = "^0.5.0"
mkdocs-literate-nav = "^0.6.0"
mkdocstrings = {extras = ["python"], version = "^0.22.0"}
mkautodoc = "^0.2.0"


[tool.poetry.group.test.dependencies]
pytest = "^7.3.2"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.21.0"
pytest-dotenv = "^0.5.2"
aiounittest = "^1.4.2"
tox = "^4.6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
